update layouts, add project individual page and update styling to be consistent throughout the site

--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
               <p class="text-secondary mb-2">IT Management for Business Student
               </p>
 
-              <div class="d-flex flex-wrap gap-2">
+              <div class="d-flex flex-wrap gap-2 skills-badges">
                 <span class="badge rounded-pill px-3 py-2 about-badge">HTML</span>
                 <span class="badge rounded-pill px-3 py-2 about-badge">CSS</span>
                 <span class="badge rounded-pill px-3 py-2 about-badge">Bootstrap</span>
@@ -85,8 +85,8 @@
 
                   <div class="d-grid gap-2">
                     <a class="btn btn-dark btn-lg" href="mailto:example@email.com">Email</a>
-                    <a class="btn btn-outline-dark btn-lg" href="#">GitHub</a>
-                    <a class="btn btn-outline-dark btn-lg" href="#">LinkedIn</a>
+                    <a class="btn btn-dark btn-lg" href="#">GitHub</a>
+                    <a class="btn btn-dark btn-lg" href="#">LinkedIn</a>
                   </div>
 
                 </div>
@@ -109,7 +109,7 @@
             <div class="card border-0 shadow-sm rounded-4 mb-4">
               <div class="card-body p-4">
                 <h2 class="h6 mb-3">Currently Learning</h2>
-                <ul class="mb-0 small">
+                <ul class="list-unstyled divided-list mb-0">
                   <li>JavaScript fundamentals</li>
                   <li>Responsive design with Bootstrap</li>
                   <li>Git &amp; GitHub workflows</li>
@@ -146,7 +146,6 @@
                     I am motivated to continue developing my technical and leadership skills while contributing
                     meaningfully to innovative, technology-focused projects.
                   </p>
-                  </p>
                 </div>
               </div>
             </section>
@@ -159,19 +158,18 @@
                   <div class="row">
                     <div class="col-md-6">
                       <h6 class="text-uppercase text-muted">Capabilities</h6>
-                      <ul class="list-group list-group-flush">
-                        <ul class="skills-list">
-                          <li>IT &amp; Business Alignment</li>
-                          <li>Digital Project Management</li>
-                          <li>Stakeholder &amp; Client Communication</li>
-                          <li>Process Improvement &amp; Problem Solving</li>
-                          <li>Cross-Functional Team Leadership</li>
-                          <li>Requirements Gathering &amp; Documentation</li>
-                          <li>Internal IT Operations Management</li>
-                          <li>Systems Analysis &amp; Improvement</li>
-                          <li>Time Management &amp; Organisation</li>
-                          <li>Adaptability &amp; Continuous Learning</li>
-                        </ul>
+                      <ul class="skills-list mb-0">
+                        <li>IT &amp; Business Alignment</li>
+                        <li>Digital Project Management</li>
+                        <li>Stakeholder &amp; Client Communication</li>
+                        <li>Process Improvement &amp; Problem Solving</li>
+                        <li>Cross-Functional Team Leadership</li>
+                        <li>Requirements Gathering &amp; Documentation</li>
+                        <li>Internal IT Operations Management</li>
+                        <li>Systems Analysis &amp; Improvement</li>
+                        <li>Time Management &amp; Organisation</li>
+                        <li>Adaptability &amp; Continuous Learning</li>
+                      </ul>
                     </div>
 
                     <div class="col-md-6">
@@ -185,6 +183,7 @@
                       </ul>
                     </div>
                   </div>
+
                 </div>
               </div>
             </section>
@@ -198,8 +197,9 @@
                     <div class="edu-date">September 2025 – Present</div>
                     <div class="edu-content">
                       <h3 class="edu-title">Graduate Apprenticeship – IT Management for Business</h3>
-                      <div class="edu-school text-secondary">University of Dundee</div>
-                      <p class="edu-desc text-secondary mb-0">
+                      <div class="edu-school">University of Dundee</div>
+                      <p class="edu-desc mb-0">
+
                         Combining academic learning with workplace delivery, focusing on aligning IT solutions
                         with business goals, systems improvement, and professional development.
                       </p>
@@ -207,10 +207,10 @@
                   </div>
 
                   <div class="edu-item">
-                    <div class="edu-date">June 2020 – March 2020</div>
+                    <div class="edu-date">June 2019 – March 2020</div>
                     <div class="edu-content">
                       <h3 class="edu-title">Diploma Digital Application Support SCQF level 6</h3>
-                      <div class="edu-school text-secondary">QA Apprenticeships</div>
+                      <div class="edu-school">QA Apprenticeships</div>
                       <p class="edu-desc text-secondary mb-0">
                         Focused on developing practical skills in digital applications to support real world business
                         context.
@@ -218,15 +218,15 @@
                     </div>
                   </div>
 
+                </div>
+              </div>
             </section>
 
-<section class="mt-5">
-  <div class="d-flex justify-content-between align-items-center border-top pt-4">
-    <a href="portfolio.html" class="text-decoration-none fw-semibold">← View Portfolio</a>
-    <a href="index.html" class="btn btn-outline-purple">Back to Home →</a>
-  </div>
-</section>
+          </div>
+        </div>
 
+      </div>
+    </div>
   </main>
 
   <footer class="bg-dark text-light mt-5 py-4">
