--- a/index.html
+++ b/index.html
@@ -4,43 +4,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Portfolio</title>
+  <title>Ellie Robson - Portfolio</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="images/favicon1.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-
 </head>
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">My Portfolio</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
-        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">My Portfolio</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+          aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <div class="collapse navbar-collapse" id="mainNav">
-        <div class="navbar-nav ms-auto">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link" href="about.html">About</a>
-          <a class="nav-link" href="portfolio.html">Portfolio</a>
+        <div class="collapse navbar-collapse" id="mainNav">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
+
+          </div>
         </div>
       </div>
-    </div>
-  </nav>
+    </nav>
+  </header>
 
   <main class="container py-5">
+
     <section class="p-5 rounded-4 shadow-lg border bg-white mb-4">
       <div class="row align-items-center g-4">
         <div class="col-md-8">
           <h1 class="display-5 fw-semibold mb-2">Ellie Robson</h1>
           <p class="lead text-secondary mb-3">
-            Graduate Apprenticeship student in IT Management for Business, passionate about technology and solving
-            real-world problems in a business context.
+            Graduate Apprenticeship student in IT Management for Business, interested in systems, process improvement,
+            and practical solutions that support how teams work.
+
           </p>
           <div class="d-flex flex-wrap gap-2">
             <a class="btn btn-purple btn-lg" href="portfolio.html">View Portfolio</a>
@@ -73,6 +77,7 @@
             </div>
           </div>
         </div>
+
         <div class="col-md-4">
           <div class="card border-0 shadow-sm rounded-4 h-100">
             <div class="card-body p-4">
@@ -100,143 +105,127 @@
       </div>
     </section>
 
-<section class="featured-projects-section my-5">
-  <div class="container">
-    <div class="featured-projects-inner">
+    <section class="featured-projects-section my-5">
+      <div class="featured-projects-inner">
 
-      <div class="d-flex align-items-end justify-content-between mb-4">
-        <div>
-          <h2 class="h5 mb-1">Featured Projects</h2>
-          <p class="text-secondary mb-0">
-            A selection of coursework and academic projects developed during my studies.
-          </p>
+        <div class="d-flex align-items-end justify-content-between mb-4">
+          <div>
+            <h2 class="h5 mb-1">Featured Projects</h2>
+            <p class="text-secondary mb-0">
+              A selection of coursework and academic projects developed during my studies.
+            </p>
+          </div>
+          <a class="featured-link" href="portfolio.html">View all →</a>
         </div>
-        <a class="featured-link" href="portfolio.html">View all →</a>
-      </div>
 
-      <div class="row gx-4 gy-4">
+        <div class="row gx-4 gy-4">
 
-        <div class="col-md-4">
-          <div class="card border-0 shadow-sm rounded-4 h-100">
-            <img src="images/projectone.png" class="card-img-top" alt="Plant database JavaScript project preview">
-            <div class="card-body p-4 d-flex flex-column">
-              <h3 class="h6 fw-bold mb-2">Plant Database (JavaScript)</h3>
-              <p class="text-secondary mb-3">
-                A coursework project focused on building a simple database-style application using JavaScript.
-              </p>
-              <div class="d-flex gap-2 flex-wrap mb-3">
-                <span class="badge about-badge">JavaScript</span>
-                <span class="badge about-badge">HTML</span>
-                <span class="badge about-badge">CSS</span>
+          <div class="col-md-4">
+            <div class="card border-0 shadow-sm rounded-4 h-100">
+              <img src="images/projectone.png" class="card-img-top" alt="Plant database JavaScript project preview">
+              <div class="card-body p-4 d-flex flex-column">
+                <h3 class="h6 fw-bold mb-2">Plant Database (JavaScript)</h3>
+                <p class="text-secondary mb-3">
+                  A coursework project focused on building a simple database-style application using JavaScript.
+                </p>
+                <div class="d-flex gap-2 flex-wrap mb-3">
+                  <span class="badge about-badge">JavaScript</span>
+                  <span class="badge about-badge">HTML</span>
+                  <span class="badge about-badge">CSS</span>
+                </div>
+                <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View Project</a>
               </div>
-              <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View Project</a>
             </div>
           </div>
-        </div>
 
-        <div class="col-md-4">
-          <div class="card border-0 shadow-sm rounded-4 h-100">
-            <img src="images/projecttwo.png" class="card-img-top" alt="ProjectNova game preview">
-            <div class="card-body p-4 d-flex flex-column">
-              <h3 class="h6 fw-bold mb-2">ProjectNova Game (JavaScript)</h3>
-              <p class="text-secondary mb-3">
-                An individual project exploring basic game mechanics and interaction using JavaScript.
-              </p>
-              <div class="d-flex gap-2 flex-wrap mb-3">
-                <span class="badge about-badge">JavaScript</span>
-                <span class="badge about-badge">UI</span>
+          <div class="col-md-4">
+            <div class="card border-0 shadow-sm rounded-4 h-100">
+              <img src="images/projecttwo.png" class="card-img-top" alt="ProjectNova game preview">
+              <div class="card-body p-4 d-flex flex-column">
+                <h3 class="h6 fw-bold mb-2">ProjectNova Game (JavaScript)</h3>
+                <p class="text-secondary mb-3">
+                  An individual project exploring basic game mechanics and interaction using JavaScript.
+                </p>
+                <div class="d-flex gap-2 flex-wrap mb-3">
+                  <span class="badge about-badge">JavaScript</span>
+                  <span class="badge about-badge">UI</span>
+                </div>
+                <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View Project</a>
               </div>
-              <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View Project</a>
             </div>
           </div>
-        </div>
 
-        <div class="col-md-4">
-          <div class="card border-0 shadow-sm rounded-4 h-100">
-            <img src="images/projectthree.png" class="card-img-top" alt="Analytics dashboard project preview">
-            <div class="card-body p-4 d-flex flex-column">
-              <h3 class="h6 fw-bold mb-2">Analytics Dashboard</h3>
-              <p class="text-secondary mb-3">
-                A responsive dashboard layout demonstrating Bootstrap components and custom CSS.
-              </p>
-              <div class="d-flex gap-2 flex-wrap mb-3">
-                <span class="badge about-badge">Bootstrap</span>
-                <span class="badge about-badge">CSS</span>
+          <div class="col-md-4">
+            <div class="card border-0 shadow-sm rounded-4 h-100">
+              <img src="images/projectthree.png" class="card-img-top" alt="Analytics dashboard project preview">
+              <div class="card-body p-4 d-flex flex-column">
+                <h3 class="h6 fw-bold mb-2">Analytics Dashboard</h3>
+                <p class="text-secondary mb-3">
+                  A responsive dashboard layout demonstrating Bootstrap components and custom CSS.
+                </p>
+                <div class="d-flex gap-2 flex-wrap mb-3">
+                  <span class="badge about-badge">Bootstrap</span>
+                  <span class="badge about-badge">CSS</span>
+                </div>
+                <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View Project</a>
               </div>
-              <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View Project</a>
             </div>
           </div>
-        </div>
 
-      </div>
-    </div>
-  </div>
-</section>
-
-
-    <section class="mb-4">
-      <div class="card border-0 bg-white shadow-sm rounded-4 experience-card">
-        <div class="card-body p-4">
-          <h2 class="h5 mb-2">Experience Snapshot</h2>
-          <p class="text-secondary mb-0">
-            I have professional experience as a Digital Project Manager and as a Solutions &amp; Communications
-            Specialist, working across client projects and internal IT systems. I enjoy collaborating with stakeholders
-            and using technology to solve business challenges.
-          </p>
         </div>
       </div>
     </section>
 
-   <section class="mb-4">
-  <div class="row gx-4 gy-4">
+    <section class="mb-4">
+      <div class="row gx-4 gy-4">
 
-    <div class="col-md-4">
-      <div class="card border-0 shadow-sm rounded-4 h-100 stats-card">
-        <div class="card-body p-4">
-          <div class="stat-accent"></div>
-          <div class="stat-number">2+</div>
-          <p class="stat-label">Roles in digital &amp; internal IT</p>
+        <div class="col-md-4">
+          <div class="card border-0 shadow-sm rounded-4 h-100 stats-card">
+            <div class="card-body p-4">
+              <div class="stat-accent"></div>
+              <div class="stat-number">2+</div>
+              <p class="stat-label">Roles in digital &amp; internal IT</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card border-0 shadow-sm rounded-4 h-100 stats-card">
+            <div class="card-body p-4">
+              <div class="stat-accent"></div>
+              <div class="stat-number">3</div>
+              <p class="stat-label">Core strengths</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="card border-0 shadow-sm rounded-4 h-100 stats-card">
+            <div class="card-body p-4">
+              <div class="stat-accent"></div>
+              <div class="stat-number">2025</div>
+              <p class="stat-label">Graduate Apprenticeship start</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="mt-5">
+      <div class="container">
+        <div class="d-flex justify-content-end align-items-center border-top pt-4">
+          <a href="portfolio.html" class="btn btn-outline-purple">
+            View Portfolio →
+          </a>
         </div>
       </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="card border-0 shadow-sm rounded-4 h-100 stats-card">
-        <div class="card-body p-4">
-          <div class="stat-accent"></div>
-          <div class="stat-number">3</div>
-          <p class="stat-label">Core strengths</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-md-4">
-      <div class="card border-0 shadow-sm rounded-4 h-100 stats-card">
-        <div class="card-body p-4">
-          <div class="stat-accent"></div>
-          <div class="stat-number">2025</div>
-          <p class="stat-label">Graduate Apprenticeship start</p>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</section>
-
-<section class="mt-5">
-  <div class="container">
-    <div class="d-flex justify-content-end align-items-center border-top pt-4">
-      <a href="portfolio.html" class="btn btn-outline-purple">
-        View Portfolio →
-      </a>
-    </div>
-  </div>
-</section>
+    </section>
 
 
   </main>
 
-  <footer class="bg-dark text-light mt-5 py-4">
+  <footer class="bg-dark mt-5 py-4 text-light">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
