--- a/portfolio.html
+++ b/portfolio.html
@@ -12,23 +12,23 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">My Portfolio</a>
+        <div class="container">
+            <a class="navbar-brand" href="index.html">My Portfolio</a>
 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
-      aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+                aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-    <div class="collapse navbar-collapse" id="mainNav">
-      <div class="navbar-nav ms-auto">
-        <a class="nav-link" href="index.html">Home</a>
-        <a class="nav-link" href="about.html">About</a>
-        <a class="nav-link active" aria-current="page" href="portfolio.html">Portfolio</a>
-      </div>
-    </div>
-  </div>
-</nav>
+            <div class="collapse navbar-collapse" id="mainNav">
+                <div class="navbar-nav ms-auto">
+                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link active" aria-current="page" href="portfolio.html">Portfolio</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
     <main class="container mt-5">
         <header class="mb-4">
@@ -46,7 +46,7 @@
                             <h3 class="card-title h5">Creation of Plant Database using JavaScript</h3>
                             <p class="card-text">I created a plant database in java which allowed users to search and
                                 store plant searches.</p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+                            <a href="project.html" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -59,7 +59,7 @@
                             <p class="card-text">Created a game where creatures are hidden on a grid and players must
                                 guess coordinates to win.</p>
 
-                            <a href="#" class="btn btn-primary">View Project</a>
+                            <a href="project.html" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -70,7 +70,7 @@
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+                            <a href="project.html" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -81,7 +81,7 @@
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+                            <a href="project.html" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -92,7 +92,7 @@
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+                            <a href="project.html" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -103,12 +103,12 @@
                         <div class="card-body">
                             <h3 class="card-title h5">Project Two</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="#" class="btn btn-primary">View Project</a>
+                            <a href="project.html" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
                 </div>
+            </div>
         </section>
-
 
         <section class="mt-5">
             <div class="container">
@@ -127,7 +127,8 @@
         </section>
 
     </main>
-    <footer class="bg-dark text-light mt-5 py-4">
+
+    <footer class="bg-dark mt-5 py-4 text-light">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -141,8 +142,9 @@
                     <a href="#" class="text-light">Email</a>
                 </div>
             </div>
-             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
- 
