update buttons on about page

--- a/about.html
+++ b/about.html
@@ -227,7 +227,22 @@
 
       </div>
     </div>
+
+    <section class="mt-5">
+    <div class="d-flex justify-content-between align-items-center border-top pt-4">
+
+      <a href="index.html" class="btn btn-outline-purple">
+        ← Back to Home
+      </a>
+
+      <a href="about.html" class="btn btn-outline-purple">
+        About Me →
+      </a>
+
+    </div>
+  </section>
   </main>
+
 
   <footer class="bg-dark text-light mt-5 py-4">
     <div class="container">
