--- a/project.html
+++ b/project.html
@@ -35,7 +35,7 @@
 
     <main class="container py-5">
         <section class="project-hero">
-            <img src="images/ProjectOne.png" alt="Plant database project screenshot" class="project-hero-img">
+            <img src="images/projectone.png" alt="Plant database project screenshot" class="project-hero-img">
 
             <div class="project-hero-overlay"></div>
 
