fix inconsistent styling issues across the site

--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
 
                   <div class="row">
                     <div class="col-md-6">
-                      <h6 class="text-uppercase text-muted">Capabilities</h6>
+                      <h6 class="section-heading">Capabilities</h6>
                       <ul class="skills-list mb-0">
                         <li>IT &amp; Business Alignment</li>
                         <li>Digital Project Management</li>
@@ -173,7 +173,7 @@
                     </div>
 
                     <div class="col-md-6">
-                      <h6 class="text-uppercase text-muted">Tools</h6>
+                      <h6 class="section-heading">Tools</h6>
                       <ul class="list-group list-group-flush">
                         <li class="list-group-item px-0">Visual Studio Code</li>
                         <li class="list-group-item px-0">Notepad ++</li>
@@ -235,8 +235,8 @@
         ← Back to Home
       </a>
 
-      <a href="about.html" class="btn btn-outline-purple">
-        About Me →
+      <a href="portfolio.html" class="btn btn-outline-purple">
+        My Portfolio →
       </a>
 
     </div>
