--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,8 @@
                             <h3 class="card-title h5">Creation of Plant Database using JavaScript</h3>
                             <p class="card-text">I created a plant database in java which allowed users to search and
                                 store plant searches.</p>
-                            <a href="project.html" class="btn btn-primary">View Project</a>
+                            <a href="project.html" class="btn btn-purple">View Project</a>
+
                         </div>
                     </article>
                 </div>
@@ -58,8 +59,8 @@
                             <h3 class="card-title h5">Creation of ProjectNova game using JavaScript.</h3>
                             <p class="card-text">Created a game where creatures are hidden on a grid and players must
                                 guess coordinates to win.</p>
+                           <a href="project.html" class="btn btn-purple">View Project</a>
 
-                            <a href="project.html" class="btn btn-primary">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -68,9 +69,9 @@
                     <article class="card h-100">
                         <img src="images/projectthree.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
-                            <h3 class="card-title h5">Project Three</h3>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="project.html" class="btn btn-primary">View Project</a>
+                            <h3 class="card-title h5">Creation of ProjectNova game using JavaScript.</h3>
+                            <p class="card-text">Created a game where creatures are hidden on a grid and players must guess coordinates to win..</p>
+                            <a href="project.html" class="btn btn-purple">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -79,9 +80,9 @@
                     <article class="card h-100">
                         <img src="images/projectthree.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
-                            <h3 class="card-title h5">Project Three</h3>
+                            <h3 class="card-title h5">Project One</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="project.html" class="btn btn-primary">View Project</a>
+                            <a href="project.html" class="btn btn-purple">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -90,9 +91,9 @@
                     <article class="card h-100">
                         <img src="images/projectone.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
-                            <h3 class="card-title h5">Project Three</h3>
+                            <h3 class="card-title h5">Project Two</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="project.html" class="btn btn-primary">View Project</a>
+                            <a href="project.html" class="btn btn-purple">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -101,9 +102,9 @@
                     <article class="card h-100">
                         <img src="images/projecttwo.png" class="card-img-top" alt="Screenshot of Project Two">
                         <div class="card-body">
-                            <h3 class="card-title h5">Project Two</h3>
+                            <h3 class="card-title h5">Project Three</h3>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <a href="project.html" class="btn btn-primary">View Project</a>
+                            <a href="project.html" class="btn btn-purple">View Project</a>
                         </div>
                     </article>
                 </div>
@@ -114,9 +115,10 @@
             <div class="container">
                 <div class="d-flex justify-content-between align-items-center border-top pt-4">
 
-                    <a href="index.html" class="text-decoration-none fw-semibold">
+                    <a href="index.html" class="btn btn-outline-purple">
                         ← Back to Home
                     </a>
+
 
                     <a href="about.html" class="btn btn-outline-purple">
                         About Me →
