--- a/about.html
+++ b/about.html
@@ -128,24 +128,19 @@
               <div class="card border-0 bg-white shadow-sm rounded-4">
                 <div class="card-body p-4">
                   <h2 class="h5 mb-2">Background</h2>
-                  <p class="text-secondary">
-                    I am a first-year student undertaking a Graduate Apprenticeship degree in IT Management for
-                    Business, with a strong passion for technology and problem-solving. I enjoy bridging the gap between
-                    IT and business by using technology-driven solutions to address real-world challenges, improve
-                    processes, and add strategic value to organisations.
-                  </p>
-
-                  <p class="text-secondary">
+                  <p>
                     My career to date has included working as a Digital Project Manager, where I led cross-functional
                     teams of developers and designers to deliver client websites from concept to completion. Following
                     this, I moved into a Solutions and Communications Specialist role, where I am responsible for
                     managing internal IT operations and contributing to the development and improvement of in-house
                     systems.
                   </p>
-                  <p class="text-secondary">
+
+                  <p>
                     I am motivated to continue developing my technical and leadership skills while contributing
                     meaningfully to innovative, technology-focused projects.
                   </p>
+
                 </div>
               </div>
             </section>
@@ -211,7 +206,7 @@
                     <div class="edu-content">
                       <h3 class="edu-title">Diploma Digital Application Support SCQF level 6</h3>
                       <div class="edu-school">QA Apprenticeships</div>
-                      <p class="edu-desc text-secondary mb-0">
+                      <p class="edu-desc mb-0">
                         Focused on developing practical skills in digital applications to support real world business
                         context.
                       </p>
@@ -229,18 +224,18 @@
     </div>
 
     <section class="mt-5">
-    <div class="d-flex justify-content-between align-items-center border-top pt-4">
+      <div class="d-flex justify-content-between align-items-center border-top pt-4">
 
-      <a href="index.html" class="btn btn-outline-purple">
-        ← Back to Home
-      </a>
+        <a href="index.html" class="btn btn-outline-purple">
+          ← Back to Home
+        </a>
 
-      <a href="portfolio.html" class="btn btn-outline-purple">
-        My Portfolio →
-      </a>
+        <a href="portfolio.html" class="btn btn-outline-purple">
+          My Portfolio →
+        </a>
 
-    </div>
-  </section>
+      </div>
+    </section>
   </main>
 
 
@@ -253,7 +248,7 @@
         </div>
 
         <div class="col-md-6 text-md-end">
-          <a href="#" class="text-light me-3">GitHub</a>
+          <a href="https://github.com/ellierobson1" class="text-light me-3">GitHub</a>
           <a href="#" class="text-light me-3">LinkedIn</a>
           <a href="#" class="text-light">Email</a>
 
