--- a/project.html
+++ b/project.html
@@ -107,10 +107,21 @@
             </div>
         </section>
 
-        <section>
-            <a href="portfolio.html" class="btn btn-outline-dark">
-                ← Back to Portfolio
-            </a>
+        <section class="mt-5">
+            <div class="container">
+                <div class="d-flex justify-content-between align-items-center border-top pt-4">
+
+                    <a href="portfolio.html" class="btn btn-outline-purple">
+                        ← Back to Projects
+                    </a>
+
+
+                    <a href="index.html" class="btn btn-outline-purple">
+                        Back to home →
+                    </a>
+
+                </div>
+            </div>
         </section>
 
   </main>
@@ -124,7 +135,7 @@
       </div>
 
       <div class="col-md-6 text-md-end">
-        <a href="#" class="text-light me-3">GitHub</a>
+        <a href="https://github.com/ellierobson1" class="text-light me-3">GitHub</a>
         <a href="#" class="text-light me-3">LinkedIn</a>
         <a href="#" class="text-light">Email</a>
       </div>
