--- a/portfolio.html
+++ b/portfolio.html
@@ -40,11 +40,11 @@
         <section>
             <div class="row g-5">
                 <div class="col-12 col-md-6 col-lg-4">
-                    <article class="card h-100">
+                    <article class="card h-100 project-card">
                         <img src="images/projectone.png" class="card-img-top" alt="Screenshot of Project One">
                         <div class="card-body">
                             <h3 class="card-title h5">Creation of Plant Database using JavaScript</h3>
-                            <p class="card-text">I created a plant database in java which allowed users to search and
+                            <p class="card-text">I created a plant database using JavaScript which allowed users to search and
                                 store plant searches.</p>
                             <a href="project.html" class="btn btn-purple">View Project</a>
 
@@ -53,7 +53,7 @@
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
-                    <article class="card h-100">
+                   <article class="card h-100 project-card">
                         <img src="images/projecttwo.png" class="card-img-top" alt="Screenshot of Project Two">
                         <div class="card-body">
                             <h3 class="card-title h5">Creation of ProjectNova game using JavaScript.</h3>
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
-                    <article class="card h-100">
+                    <article class="card h-100 project-card">
                         <img src="images/projectthree.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
                             <h3 class="card-title h5">Creation of ProjectNova game using JavaScript.</h3>
@@ -77,7 +77,7 @@
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
-                    <article class="card h-100">
+                    <article class="card h-100 project-card">
                         <img src="images/projectthree.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
                             <h3 class="card-title h5">Project One</h3>
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
-                    <article class="card h-100">
+                    <article class="card h-100 project-card">
                         <img src="images/projectone.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
                             <h3 class="card-title h5">Project Two</h3>
@@ -99,7 +99,7 @@
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
-                    <article class="card h-100">
+                    <article class="card h-100 project-card">
                         <img src="images/projecttwo.png" class="card-img-top" alt="Screenshot of Project Two">
                         <div class="card-body">
                             <h3 class="card-title h5">Project Three</h3>
@@ -139,7 +139,7 @@
                 </div>
 
                 <div class="col-md-6 text-md-end">
-                    <a href="#" class="text-light me-3">GitHub</a>
+                    <a href="https://github.com/ellierobson1" class="text-light me-3">GitHub</a>
                     <a href="#" class="text-light me-3">LinkedIn</a>
                     <a href="#" class="text-light">Email</a>
                 </div>
