fix paragraph styling issues

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h5>My Portfolio</h5>
+          <h5>Ellie Robson - Portfolio</h5>
           <p class="mb-0">© 2026 Ellie Robson. All rights reserved.</p>
         </div>
 
