fix all w3c points and repsponsive tweaks

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,81 +37,86 @@
             <div class="accent-line"></div>
         </header>
 
-        <section>
+        <div>
             <div class="row g-5">
                 <div class="col-12 col-md-6 col-lg-4">
-                    <article class="card h-100 project-card">
+                    <div class="card h-100 project-card">
                         <img src="images/projectone.png" class="card-img-top" alt="Screenshot of Project One">
                         <div class="card-body">
-                            <h3 class="card-title h5">Creation of Plant Database using JavaScript</h3>
-                            <p class="card-text">I created a plant database using JavaScript which allowed users to search and
+                            <p class="card-title h5">Creation of Plant Database using JavaScript</p>
+                            <p class="card-text">I created a plant database using JavaScript which allowed users to
+                                search and
                                 store plant searches.</p>
                             <a href="project.html" class="btn btn-purple">View Project</a>
 
                         </div>
-                    </article>
+                    </div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
-                   <article class="card h-100 project-card">
+                    <div class="card h-100 project-card">
                         <img src="images/projecttwo.png" class="card-img-top" alt="Screenshot of Project Two">
                         <div class="card-body">
-                            <h3 class="card-title h5">Creation of ProjectNova game using JavaScript.</h3>
+                            <p class="card-title h5">Creation of ProjectNova game using JavaScript.</p>
                             <p class="card-text">Created a game where creatures are hidden on a grid and players must
                                 guess coordinates to win.</p>
-                           <a href="project.html" class="btn btn-purple">View Project</a>
+                            <a href="project.html" class="btn btn-purple">View Project</a>
 
                         </div>
-                    </article>
+                    </div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
-                    <article class="card h-100 project-card">
+                    <div class="card h-100 project-card">
                         <img src="images/projectthree.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
-                            <h3 class="card-title h5">Creation of ProjectNova game using JavaScript.</h3>
-                            <p class="card-text">Created a game where creatures are hidden on a grid and players must guess coordinates to win..</p>
+                            <p class="card-title h5">Creation of Analytics Dashboard using Bootstrap and CSS</p>
+                            <p class="card-text">Created a responsive dashboard layout demonstrating Bootstrap
+                                components
+                                and custom CSS.</p>
                             <a href="project.html" class="btn btn-purple">View Project</a>
                         </div>
-                    </article>
+                    </div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
-                    <article class="card h-100 project-card">
+                    <div class="card h-100 project-card">
                         <img src="images/projectthree.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
-                            <h3 class="card-title h5">Project One</h3>
+                            <p class="card-title h5">Project One</p>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <a href="project.html" class="btn btn-purple">View Project</a>
                         </div>
-                    </article>
+                    </div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
-                    <article class="card h-100 project-card">
+                    <div class="card h-100 project-card">
                         <img src="images/projectone.png" class="card-img-top" alt="Screenshot of Project Three">
                         <div class="card-body">
-                            <h3 class="card-title h5">Project Two</h3>
+                            <p class="card-title h5">Project Two</p>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <a href="project.html" class="btn btn-purple">View Project</a>
                         </div>
-                    </article>
+                    </div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
-                    <article class="card h-100 project-card">
+                    <div class="card h-100 project-card">
                         <img src="images/projecttwo.png" class="card-img-top" alt="Screenshot of Project Two">
                         <div class="card-body">
-                            <h3 class="card-title h5">Project Three</h3>
+                            <p class="card-title h5">Project Three</p>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             <a href="project.html" class="btn btn-purple">View Project</a>
                         </div>
-                    </article>
+                    </div>
                 </div>
-            </div>
-        </section>
 
-        <section class="mt-5">
+            </div>
+        </div>
+
+
+        <div class="mt-5">
             <div class="container">
                 <div class="d-flex justify-content-between align-items-center border-top pt-4">
 
@@ -126,7 +131,7 @@
 
                 </div>
             </div>
-        </section>
+        </div>
 
     </main>
 
@@ -134,14 +139,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5>Ellie Robson - Portfolio</h5>
+                    <p class="h5 mb-1">Ellie Robson - Portfolio</p>
                     <p class="mb-0">© 2026 Ellie Robson. All rights reserved.</p>
                 </div>
 
                 <div class="col-md-6 text-md-end">
                     <a href="https://github.com/ellierobson1" class="text-light me-3">GitHub</a>
-                    <a href="#" class="text-light me-3">LinkedIn</a>
-                    <a href="#" class="text-light">Email</a>
+                    <a href="https://uk.linkedin.com/" class="text-light me-3">LinkedIn</a>
+                    <a href="mailto:190010498@dundee.ac.uk" class="text-light">Email</a>
                 </div>
             </div>
         </div>
