--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="images/favicon1.png" type="image/png">
+
+
 </head>
 
 <body>
@@ -80,7 +82,7 @@
 
             <section class="mb-4">
               <div class="card border-0 bg-white shadow-sm rounded-4">
-                <div class="card-body p-4">
+                <div class="card-body p-3 p-md-4">
                   <h2 class="h5 mb-3">Contact</h2>
 
                   <div class="d-grid gap-2">
@@ -95,7 +97,7 @@
 
 
             <div class="card border-0 shadow-sm rounded-4 mb-4">
-              <div class="card-body p-4">
+              <div class="card-body p-3 p-md-4">
                 <h2 class="h6 mb-3">At a Glance</h2>
                 <ul class="list-unstyled mb-0 small">
                   <li><strong>Degree:</strong> IT Management for Business</li>
@@ -107,7 +109,7 @@
             </div>
 
             <div class="card border-0 shadow-sm rounded-4 mb-4">
-              <div class="card-body p-4">
+              <div class="card-body p-3 p-md-4">
                 <h2 class="h6 mb-3">Currently Learning</h2>
                 <ul class="list-unstyled divided-list mb-0">
                   <li>JavaScript fundamentals</li>
@@ -126,7 +128,7 @@
 
             <section class="mb-4">
               <div class="card border-0 bg-white shadow-sm rounded-4">
-                <div class="card-body p-4">
+                <div class="card-body p-3 p-md-4">
                   <h2 class="h5 mb-2">Background</h2>
                   <p>
                     My career to date has included working as a Digital Project Manager, where I led cross-functional
@@ -147,12 +149,12 @@
 
             <section class="mb-4">
               <div class="card border-0 bg-white shadow-sm rounded-4">
-                <div class="card-body p-4">
+                <div class="card-body p-3 p-md-4">
                   <h2 class="h5 mb-3">Skills</h2>
 
                   <div class="row">
                     <div class="col-md-6">
-                      <h6 class="section-heading">Capabilities</h6>
+                      <h3 class="section-heading">Capabilities</h3>
                       <ul class="skills-list mb-0">
                         <li>IT &amp; Business Alignment</li>
                         <li>Digital Project Management</li>
@@ -168,7 +170,7 @@
                     </div>
 
                     <div class="col-md-6">
-                      <h6 class="section-heading">Tools</h6>
+                      <h3 class="section-heading">Tools</h3>
                       <ul class="list-group list-group-flush">
                         <li class="list-group-item px-0">Visual Studio Code</li>
                         <li class="list-group-item px-0">Notepad ++</li>
@@ -185,7 +187,7 @@
 
             <section class="mb-4">
               <div class="card border-0 bg-white shadow-sm rounded-4">
-                <div class="card-body p-4">
+               <div class="card-body p-3 p-md-4">
                   <h2 class="h5 mb-3">Education</h2>
 
                   <div class="edu-item">
@@ -223,7 +225,7 @@
       </div>
     </div>
 
-    <section class="mt-5">
+    <div class="mt-5">
       <div class="d-flex justify-content-between align-items-center border-top pt-4">
 
         <a href="index.html" class="btn btn-outline-purple">
@@ -235,7 +237,8 @@
         </a>
 
       </div>
-    </section>
+    </div>
+
   </main>
 
 
@@ -243,14 +246,14 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h5>Ellie Robson - Portfolio</h5>
+          <p class="h5 mb-1">Ellie Robson - Portfolio</p>
           <p class="mb-0">© 2026 Ellie Robson. All rights reserved.</p>
         </div>
 
         <div class="col-md-6 text-md-end">
           <a href="https://github.com/ellierobson1" class="text-light me-3">GitHub</a>
-          <a href="#" class="text-light me-3">LinkedIn</a>
-          <a href="#" class="text-light">Email</a>
+          <a href="https://uk.linkedin.com/" class="text-light me-3">LinkedIn</a>
+          <a href="mailto:190010498@dundee.ac.uk" class="text-light">Email</a>
 
 
         </div>
