--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <main class="container py-5">
 
-    <section class="p-5 rounded-4 shadow-lg border bg-white mb-4">
+    <section class="p-4 p-md-5 rounded-4 shadow-lg border bg-white mb-4">
       <div class="row align-items-center g-4">
         <div class="col-md-8">
           <h1 class="display-5 fw-semibold mb-2">Ellie Robson</h1>
@@ -46,7 +46,7 @@
             and practical solutions that support how teams work.
 
           </p>
-          <div class="d-flex flex-wrap gap-2">
+          <div class="d-grid gap-2 d-md-flex">
             <a class="btn btn-purple btn-lg" href="portfolio.html">View Portfolio</a>
             <a class="btn btn-outline-purple btn-lg" href="about.html">About Me</a>
 
@@ -63,7 +63,7 @@
         </div>
       </div>
     </section>
-    <section class="mb-4">
+    <div class="mb-4">
       <div class="row g-4">
 
         <div class="col-md-4">
@@ -101,9 +101,8 @@
             </div>
           </div>
         </div>
-
       </div>
-    </section>
+    </div>
 
     <section class="featured-projects-section my-5">
       <div class="featured-projects-inner">
@@ -176,7 +175,7 @@
       </div>
     </section>
 
-    <section class="mb-4">
+    <div class="mb-4">
       <div class="row gx-4 gy-4">
 
         <div class="col-md-4">
@@ -210,9 +209,9 @@
         </div>
 
       </div>
-    </section>
+    </div>
 
-    <section class="mt-5">
+    <div class="mt-5">
       <div class="container">
         <div class="d-flex justify-content-end align-items-center border-top pt-4">
           <a href="portfolio.html" class="btn btn-outline-purple">
@@ -220,7 +219,7 @@
           </a>
         </div>
       </div>
-    </section>
+    </div>
 
 
   </main>
@@ -229,14 +228,13 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h5>Ellie Robson - Portfolio</h5>
+          <p class="h5 mb-1">Ellie Robson - Portfolio</p>
           <p class="mb-0">© 2026 Ellie Robson. All rights reserved.</p>
         </div>
-
         <div class="col-md-6 text-md-end">
-          <a href="#" class="text-light me-3">GitHub</a>
-          <a href="#" class="text-light me-3">LinkedIn</a>
-          <a href="#" class="text-light">Email</a>
+          <a href="https://github.com/ellierobson1" class="text-light me-3">GitHub</a>
+          <a href="https://uk.linkedin.com/" class="text-light me-3">LinkedIn</a>
+          <a href="mailto:190010498@dundee.ac.uk" class="text-light">Email</a>
         </div>
       </div>
     </div>
