--- a/project.html
+++ b/project.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plant Database Project | Portfolio</title>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/favicon1.png" type="image/png">
 </head>
 
 <body>
@@ -17,7 +17,8 @@
             <div class="container">
                 <a class="navbar-brand" href="index.html">My Portfolio</a>
 
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+                    aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -107,42 +108,39 @@
             </div>
         </section>
 
-        <section class="mt-5">
+
+
+        <div class="mt-5">
             <div class="container">
                 <div class="d-flex justify-content-between align-items-center border-top pt-4">
 
-                    <a href="portfolio.html" class="btn btn-outline-purple">
-                        ← Back to Projects
-                    </a>
-
-
                     <a href="index.html" class="btn btn-outline-purple">
-                        Back to home →
+                        ← Back to Portfolio
                     </a>
 
                 </div>
             </div>
-        </section>
+        </div>
+    </main>
 
-  </main>
+    <footer class="bg-dark mt-5 py-4 text-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p class="h5 mb-1">Ellie Robson - Portfolio</p>
+                    <p class="mb-0">© 2026 Ellie Robson. All rights reserved.</p>
+                </div>
 
-<footer class="bg-dark mt-5 py-4 text-light">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <h5>Ellie Robson - Portfolio</h5>
-        <p class="mb-0">© 2026 Ellie Robson. All rights reserved.</p>
-      </div>
+                <div class="col-md-6 text-md-end">
+                    <a href="https://github.com/ellierobson1" class="text-light me-3">GitHub</a>
+                    <a href="https://uk.linkedin.com/" class="text-light me-3">LinkedIn</a>
+                    <a href="mailto:190010498@dundee.ac.uk" class="text-light">Email</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
-      <div class="col-md-6 text-md-end">
-        <a href="https://github.com/ellierobson1" class="text-light me-3">GitHub</a>
-        <a href="#" class="text-light me-3">LinkedIn</a>
-        <a href="#" class="text-light">Email</a>
-      </div>
-    </div>
-  </div>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
