add read me file and final tweaks

--- a/about.html
+++ b/about.html
@@ -87,8 +87,8 @@
 
                   <div class="d-grid gap-2">
                     <a class="btn btn-dark btn-lg" href="mailto:example@email.com">Email</a>
-                    <a class="btn btn-dark btn-lg" href="#">GitHub</a>
-                    <a class="btn btn-dark btn-lg" href="#">LinkedIn</a>
+                    <a class="btn btn-dark btn-lg" href="https://github.com/ellierobson1">GitHub</a>
+                    <a class="btn btn-dark btn-lg" href="https://uk.linkedin.com/">LinkedIn</a>
                   </div>
 
                 </div>
