--- a/project.html
+++ b/project.html
@@ -114,7 +114,7 @@
             <div class="container">
                 <div class="d-flex justify-content-between align-items-center border-top pt-4">
 
-                    <a href="index.html" class="btn btn-outline-purple">
+                    <a href="portfolio.html" class="btn btn-outline-purple">
                         ← Back to Portfolio
                     </a>
 
