add font awesome icons to the footer

--- a/index.html
+++ b/index.html
@@ -232,9 +232,16 @@
           <p class="mb-0">© 2026 Ellie Robson. All rights reserved.</p>
         </div>
         <div class="col-md-6 text-md-end">
-          <a href="https://github.com/ellierobson1" class="text-light me-3">GitHub</a>
-          <a href="https://uk.linkedin.com/" class="text-light me-3">LinkedIn</a>
-          <a href="mailto:190010498@dundee.ac.uk" class="text-light">Email</a>
+          <a href="https://github.com/ellierobson1" class="text-light me-3">
+            <i class="fa-brands fa-github"></i> GitHub
+          </a>
+          <a href="https://uk.linkedin.com/" class="text-light me-3">
+            <i class="fa-brands fa-linkedin"></i> LinkedIn
+          </a>
+          <a href="mailto:190010498@dundee.ac.uk" class="text-light">
+            <i class="fa-solid fa-envelope"></i> Email
+          </a>
+
         </div>
       </div>
     </div>
