--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <link rel="icon" href="images/favicon1.png" type="image/png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 
 </head>
@@ -187,7 +188,7 @@
 
             <section class="mb-4">
               <div class="card border-0 bg-white shadow-sm rounded-4">
-               <div class="card-body p-3 p-md-4">
+                <div class="card-body p-3 p-md-4">
                   <h2 class="h5 mb-3">Education</h2>
 
                   <div class="edu-item">
@@ -251,11 +252,15 @@
         </div>
 
         <div class="col-md-6 text-md-end">
-          <a href="https://github.com/ellierobson1" class="text-light me-3">GitHub</a>
-          <a href="https://uk.linkedin.com/" class="text-light me-3">LinkedIn</a>
-          <a href="mailto:190010498@dundee.ac.uk" class="text-light">Email</a>
-
-
+          <a href="https://github.com/ellierobson1" class="text-light me-3">
+            <i class="fa-brands fa-github"></i> GitHub
+          </a>
+          <a href="https://uk.linkedin.com/" class="text-light me-3">
+            <i class="fa-brands fa-linkedin"></i> LinkedIn
+          </a>
+          <a href="mailto:190010498@dundee.ac.uk" class="text-light">
+            <i class="fa-solid fa-envelope"></i> Email
+          </a>
         </div>
 
       </div>
