--- a/project.html
+++ b/project.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/favicon1.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -129,13 +130,20 @@
                 <div class="col-md-6">
                     <p class="h5 mb-1">Ellie Robson - Portfolio</p>
                     <p class="mb-0">© 2026 Ellie Robson. All rights reserved.</p>
-                </div>
-
-                <div class="col-md-6 text-md-end">
-                    <a href="https://github.com/ellierobson1" class="text-light me-3">GitHub</a>
-                    <a href="https://uk.linkedin.com/" class="text-light me-3">LinkedIn</a>
-                    <a href="mailto:190010498@dundee.ac.uk" class="text-light">Email</a>
-                </div>
+                    </div>
+                    
+                    <div class="col-md-6 text-md-end">
+                        <a href="https://github.com/ellierobson1" class="text-light me-3">
+                            <i class="fa-brands fa-github"></i> GitHub
+                        </a>
+                        <a href="https://uk.linkedin.com/" class="text-light me-3">
+                            <i class="fa-brands fa-linkedin"></i> LinkedIn
+                        </a>
+                        <a href="mailto:190010498@dundee.ac.uk" class="text-light">
+                            <i class="fa-solid fa-envelope"></i> Email
+                        </a>
+                
+                    </div>
             </div>
         </div>
     </footer>
