--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
                   <h2 class="h5 mb-3">Contact</h2>
 
                   <div class="d-grid gap-2">
-                    <a class="btn btn-dark btn-lg" href="mailto:example@email.com">Email</a>
+                    <a class="btn btn-dark btn-lg" href="mailto:190010498@dundee.ac.uk">Email</a>
                     <a class="btn btn-dark btn-lg" href="https://github.com/ellierobson1">GitHub</a>
                     <a class="btn btn-dark btn-lg" href="https://uk.linkedin.com/">LinkedIn</a>
                   </div>
@@ -124,8 +124,6 @@
 
           </div>
           <div class="col-lg-8">
-
-
 
             <section class="mb-4">
               <div class="card border-0 bg-white shadow-sm rounded-4">
