--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                   <span class="badge about-badge">HTML</span>
                   <span class="badge about-badge">CSS</span>
                 </div>
-                <a class="btn btn-purple mt-auto align-self-start" href="portfolio.html">View Project</a>
+                <a class="btn btn-purple mt-auto align-self-start" href="project.html">View Project</a>
               </div>
             </div>
           </div>
